--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
     	<artifactId>logback-classic</artifactId>
     	<version>1.1.8</version>
     </dependency>
+	 <dependency>
+        <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+          <version>1.6.6</version>
+    </dependency>
     <dependency>
     	<groupId>ch.qos.logback</groupId>
     	<artifactId>logback-core</artifactId>
