old jar replaced

--- a/pom.xml
+++ b/pom.xml
@@ -22,20 +22,20 @@
   </repositories>
 	<dependencies>
 		<dependency>
-			<groupId>Anchel</groupId>
-			<artifactId>Anchel-R66</artifactId>
+			<groupId>Waarp</groupId>
+			<artifactId>WaarpR66</artifactId>
 			<version>3.0.8</version>
 			<!-- below 2 lines are added for TRAVIS purpose -->
 			<scope>system</scope>
-			<systemPath>${TRAVIS_BUILD_DIR}/src/main/webapp/WEB-INF/lib/Anchel-R66-3.0.8.jar</systemPath>
+			<systemPath>${TRAVIS_BUILD_DIR}/src/main/webapp/WEB-INF/lib/WaarpR66-3.0.8.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>Anchel</groupId>
-			<artifactId>Anchel-GatewayFtp</artifactId>
+			<groupId>Waarp</groupId>
+			<artifactId>WaarpGatewayFtp</artifactId>
 			<version>3.0.6</version>
 			<!-- below 2 lines are added for TRAVIS purpose -->
 			<scope>system</scope>
-			<systemPath>${TRAVIS_BUILD_DIR}/src/main/webapp/WEB-INF/lib/Anchel-GatewayFtp-3.0.6.jar</systemPath>
+			<systemPath>${TRAVIS_BUILD_DIR}/src/main/webapp/WEB-INF/lib/WaarpGatewayFtp-3.0.6.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
